<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoPedido">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPedidoNuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pedidoNuevo"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtNumeroPedido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtNumeroMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPromLun"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/lunes"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnPromMar"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/martes"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPromMie"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/miercoles"
                    android:textSize="19dp" />

                <Button
                    android:id="@+id/btnPromJue"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/jueves"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPromVie"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/viernes"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnPromSab"
                    android:layout_width="100dp"
                    android:layout_height="140dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/sabado"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnFinalizarComida"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="#9FFF5722"
        android:onClick="regresar"
        android:text="@string/finalizar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />


</androidx.constraintlayout.widget.ConstraintLayout>