<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoPedido">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPedidoNuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pedidoNuevo"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtNumeroPedido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtNumeroMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="350dp"
        android:layout_height="360dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPaquetes"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/res"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/btnAlitas"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/pollo"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnHamburguesas"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/pescado"
                    android:textSize="25dp" />

                <Button
                    android:id="@+id/btnBuoneles"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/arrachera"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCostillas"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/doble"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/btnPapas"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:onClick="irCantidad"
                    android:text="@string/especial"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnFinalizarComida"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="#9FFF5722"
        android:onClick="regresar"
        android:text="@string/finalizar"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>