<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoPedido">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtPedidoNuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pedidoNuevo"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtNumeroPedido"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtNumeroMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.379">

        <Button
            android:id="@+id/btnComida"
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:onClick="irPedidoNuevoComida"
            android:text="@string/comida"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnBebidas"
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:text="@string/bebida"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnPostres"
            android:layout_width="300dp"
            android:layout_height="130dp"
            android:text="@string/postre"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnFinalizarCuenta"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:background="#BAFF5722"
            android:onClick="regresar"
            android:text="@string/finalizar"
            android:textSize="30sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>